Add process file confirmation step with dynamic JS

--- a/app/views/create-account/fixed-penalty-uploads/published.html
+++ b/app/views/create-account/fixed-penalty-uploads/published.html
@@ -76,12 +76,13 @@
           <thead class="govuk-table__head">
             <tr class="govuk-table__row">
               <th class="govuk-table__header" aria-sort="none" scope="col" style="width: 10%;">Account</th>
-              <th class="govuk-table__header" aria-sort="none" scope="col" style="width: 19%;">Name</th>
+              <th class="govuk-table__header" aria-sort="none" scope="col" style="width: 14%;">Name</th>
               <th class="govuk-table__header" aria-sort="none" scope="col" style="width: 10%;">Defendant</th>
               <th class="govuk-table__header" aria-sort="none" scope="col" style="width: 14%;">Date of birth</th>
               <th class="govuk-table__header" aria-sort="none" scope="col" style="width: 15%">Address line 1</th>
-              <th class="govuk-table__header" aria-sort="none" scope="col" style="width: 18%;">Business unit</th>
-              <th class="govuk-table__header govuk-table__cell--numeric" aria-sort="none" scope="col" style="width: 15%;">Imposed</th>
+              <th class="govuk-table__header" aria-sort="none" scope="col" style="width: 16%;">Business unit</th>
+              <th class="govuk-table__header" aria-sort="none" scope="col" style="width: 15%;">Ticket number</th>
+              <th class="govuk-table__header govuk-table__cell--numeric" aria-sort="none" scope="col" style="width: 12%;">Imposed</th>
             </tr>
           </thead>
           <tbody class="govuk-table__body">
@@ -93,6 +94,7 @@
               <td class="govuk-table__cell">05 May 1995</td>
               <td class="govuk-table__cell">123 High Street</td>
               <td class="govuk-table__cell">Avon and Somerset</td>
+              <td class="govuk-table__cell">JB0001107</td>
               <td class="govuk-table__cell govuk-table__cell--numeric">£150.00</td>
           </tr>
           
@@ -103,6 +105,7 @@
               <td class="govuk-table__cell">17 Feb 2006</td>
               <td class="govuk-table__cell">45 Maple Road</td>
               <td class="govuk-table__cell">Avon and Somerset</td>
+              <td class="govuk-table__cell">JB0001107</td>
               <td class="govuk-table__cell govuk-table__cell--numeric">£150.00</td>
           </tr>
           
@@ -113,6 +116,7 @@
               <td class="govuk-table__cell">23 Aug 1985</td>
               <td class="govuk-table__cell">7 Elm Avenue</td>
               <td class="govuk-table__cell">Avon and Somerset</td>
+              <td class="govuk-table__cell">JB0001107</td>
               <td class="govuk-table__cell govuk-table__cell--numeric">£150.00</td>
           </tr>
           
@@ -123,6 +127,7 @@
               <td class="govuk-table__cell">29 Dec 2004</td>
               <td class="govuk-table__cell">88 Oak Street</td>
               <td class="govuk-table__cell">Devon</td>
+              <td class="govuk-table__cell">JB0001107</td>
               <td class="govuk-table__cell govuk-table__cell--numeric">£95.00</td>
           </tr>
 
@@ -133,6 +138,7 @@
             <td class="govuk-table__cell">–</td>
             <td class="govuk-table__cell">Warehouse 2A</td>
             <td class="govuk-table__cell">Devon</td>
+            <td class="govuk-table__cell">JB0001107</td>
             <td class="govuk-table__cell govuk-table__cell--numeric">£150.00</td>
         </tr>
           
