--- a/app/views/index.html
+++ b/app/views/index.html
@@ -58,8 +58,14 @@
       }) }} -->
 
       <p class="govuk-body">
+        <a class="govuk-link--no-visited-state" href="./search/search.html">
+         Search
+        </a>
+      </p> 
+
+      <p class="govuk-body">
         <a class="govuk-link--no-visited-state" href="./create-account/create-account.html">
-        Manually create an account
+        Create an account
         </a>
       </p> 
 
@@ -67,13 +73,23 @@
        <a class="govuk-link--no-visited-state" href="./create-account/fixed-penalty-uploads/to-review.html">
         Fixed Penalty uploads
        </a>
-      </p> 
+      </p>
 
       <p class="govuk-body">
-        <a class="govuk-link--no-visited-state" href="./search/search.html">
-         Search
-        </a>
+       <a class="govuk-link--no-visited-state" href="./auto-cash-input/process.html">
+        Auto-cash input
+       </a>
+      </p>
+
+      <p class="govuk-body">
+       <a class="govuk-link--no-visited-state" href="./sandbox.html">
+        Sandbox
+       </a>
       </p> 
+
+      
+
+
 
 
 
