--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -5,6 +5,24 @@
 
 // Add extra styles here
 
+.govuk-width-container {
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+.moj-button-group-with-divider {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+}
+
+.moj-button-divider {
+  display: inline-block;
+  width: 1px;
+  height: 2.4rem;
+  background-color: #b1b4b6; /* GOV.UK light grey */
+}
+
 
 .govuk-notification-banner .warning {
   border: 5px solid #d4351c;
