--- a/app/views/index.html
+++ b/app/views/index.html
@@ -77,7 +77,13 @@
 
       <p class="govuk-body">
        <a class="govuk-link--no-visited-state" href="./auto-cash-input/process.html">
-        Auto-cash input
+        Automatic cash input
+       </a>
+      </p>
+
+      <p class="govuk-body">
+       <a class="govuk-link--no-visited-state" href="./manual-cash-input/index.html">
+        Manual cash input
        </a>
       </p>
 
